@startuml

title __PAINT's Class Diagram__\n

  namespace ca.utoronto.utm.paint {
    class ca.utoronto.utm.paint.Shape.Circle {
        - radius : int
        + Circle()
        + getCentre()
        + getRadius()
        + setCentre()
        + setRadius()
    }
  }
  

  namespace ca.utoronto.utm.paint {
    class ca.utoronto.utm.paint.Paint {
        + Paint()
        {static} + main()
    }
  }
  

  namespace ca.utoronto.utm.paint {
    class ca.utoronto.utm.paint.PaintModel {
        - circles : ArrayList<Circle>
        - points : ArrayList<Point>
        + PaintModel()
        + addCircle()
        + addPoint()
        + getCircles()
        + getPoints()
    }
  }
  

  namespace ca.utoronto.utm.paint {
    class ca.utoronto.utm.paint.PaintPanel {
        - i : int
        - mode : String
        + PaintPanel()
        + mouseClicked()
        + mouseDragged()
        + mouseEntered()
        + mouseExited()
        + mouseMoved()
        + mousePressed()
        + mouseReleased()
        + paintComponent()
        + setMode()
        + update()
    }
  }
  

  namespace ca.utoronto.utm.paint {
    class ca.utoronto.utm.paint.Point {
        ~ x : int
        ~ y : int
        + getX()
        + getY()
        + setX()
        + setY()
        ~ Point()
    }
  }
  

  namespace ca.utoronto.utm.paint {
    class ca.utoronto.utm.paint.ShapeChooserPanel {
        + ShapeChooserPanel()
        + actionPerformed()
    }
  }
  

  namespace ca.utoronto.utm.paint {
    class ca.utoronto.utm.paint.View {
        {static} - serialVersionUID : long
        + View()
        + actionPerformed()
        + getPaintPanel()
        + getShapeChooserPanel()
        - createMenuBar()
    }
  }
  

  ca.utoronto.utm.paint.Shape.Circle o-- ca.utoronto.utm.paint.Point : centre
  ca.utoronto.utm.paint.Paint o-- ca.utoronto.utm.paint.PaintModel : model
  ca.utoronto.utm.paint.Paint o-- ca.utoronto.utm.paint.View : view
  ca.utoronto.utm.paint.PaintModel -up-|> java.util.Observable
  ca.utoronto.utm.paint.PaintPanel .up.|> java.awt.event.MouseListener
  ca.utoronto.utm.paint.PaintPanel .up.|> java.awt.event.MouseMotionListener
  ca.utoronto.utm.paint.PaintPanel .up.|> java.util.Observer
  ca.utoronto.utm.paint.PaintPanel -up-|> javax.swing.JPanel
  ca.utoronto.utm.paint.PaintPanel o-- ca.utoronto.utm.paint.Shape.Circle : circle
  ca.utoronto.utm.paint.PaintPanel o-- ca.utoronto.utm.paint.PaintModel : model
  ca.utoronto.utm.paint.PaintPanel o-- ca.utoronto.utm.paint.View : view
  ca.utoronto.utm.paint.ShapeChooserPanel .up.|> java.awt.event.ActionListener
  ca.utoronto.utm.paint.ShapeChooserPanel -up-|> javax.swing.JPanel
  ca.utoronto.utm.paint.ShapeChooserPanel o-- ca.utoronto.utm.paint.View : view
  ca.utoronto.utm.paint.View .up.|> java.awt.event.ActionListener
  ca.utoronto.utm.paint.View -up-|> javax.swing.JFrame
  ca.utoronto.utm.paint.View o-- ca.utoronto.utm.paint.PaintModel : model
  ca.utoronto.utm.paint.View o-- ca.utoronto.utm.paint.PaintPanel : paintPanel
  ca.utoronto.utm.paint.View o-- ca.utoronto.utm.paint.ShapeChooserPanel : shapeChooserPanel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
